crates/assay-types/tests/snapshots/schema_snapshots__merge-execute-result-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$defs": {
    "ChangeType": {
      "description": "Change type for files in a clean merge.",
      "oneOf": [
        {
          "const": "added",
          "description": "File was added.",
          "type": "string"
        },
        {
          "const": "modified",
          "description": "File was modified.",
          "type": "string"
        },
        {
          "const": "deleted",
          "description": "File was deleted.",
          "type": "string"
        }
      ]
    },
    "ConflictMarker": {
      "additionalProperties": false,
      "description": "A single conflict marker found in a file.",
      "properties": {
        "file": {
          "description": "File path relative to the repository root.",
          "type": "string"
        },
        "line": {
          "description": "1-based line number where the marker was found.",
          "format": "uint32",
          "minimum": 0,
          "type": "integer"
        },
        "marker_type": {
          "$ref": "#/$defs/MarkerType",
          "description": "Type of marker (`<<<<<<<`, `=======`, or `>>>>>>>`)."
        }
      },
      "required": [
        "file",
        "line",
        "marker_type"
      ],
      "type": "object"
    },
    "ConflictScan": {
      "additionalProperties": false,
      "description": "Result of scanning files for conflict markers.",
      "properties": {
        "has_markers": {
          "description": "Whether any conflict markers were found.",
          "type": "boolean"
        },
        "markers": {
          "description": "Individual markers found (may be empty).",
          "items": {
            "$ref": "#/$defs/ConflictMarker"
          },
          "type": "array"
        },
        "truncated": {
          "description": "Whether the scan was truncated (too many files or markers).",
          "type": "boolean"
        }
      },
      "required": [
        "has_markers",
        "truncated"
      ],
      "type": "object"
    },
    "FileChange": {
      "additionalProperties": false,
      "description": "A file changed in a clean merge.",
      "properties": {
        "change_type": {
          "$ref": "#/$defs/ChangeType",
          "description": "Type of change (added, modified, or deleted)."
        },
        "path": {
          "description": "Path of the changed file relative to the repository root.",
          "type": "string"
        }
      },
      "required": [
        "path",
        "change_type"
      ],
      "type": "object"
    },
    "MarkerType": {
      "description": "Type of a conflict marker found in a file.",
      "oneOf": [
        {
          "const": "ours",
          "description": "Start of \"ours\" side: `<<<<<<<`",
          "type": "string"
        },
        {
          "const": "separator",
          "description": "Separator between sides: `=======`",
          "type": "string"
        },
        {
          "const": "theirs",
          "description": "Start of \"theirs\" side: `>>>>>>>`",
          "type": "string"
        }
      ]
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "Result of executing `git merge --no-ff`.\n\nOn success, contains the merge commit SHA and changed files.\nOn conflict, contains conflict details with automatic abort cleanup.",
  "properties": {
    "conflict_details": {
      "anyOf": [
        {
          "$ref": "#/$defs/ConflictScan"
        },
        {
          "type": "null"
        }
      ],
      "description": "Conflict details when `was_conflict` is true."
    },
    "files_changed": {
      "description": "Files changed by the merge (present only on success).",
      "items": {
        "$ref": "#/$defs/FileChange"
      },
      "type": "array"
    },
    "merge_sha": {
      "description": "SHA of the merge commit (present only on success).",
      "type": [
        "string",
        "null"
      ]
    },
    "was_conflict": {
      "description": "Whether the merge had a conflict.",
      "type": "boolean"
    }
  },
  "required": [
    "was_conflict"
  ],
  "title": "MergeExecuteResult",
  "type": "object"
}
