crates/assay-types/tests/snapshots/schema_snapshots__merge-plan-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$defs": {
    "MergePlanEntry": {
      "additionalProperties": false,
      "description": "A single entry in the merge plan, recording why a session was placed\nat a particular position in the merge sequence.",
      "properties": {
        "position": {
          "description": "0-based position in the merge sequence.",
          "format": "uint",
          "minimum": 0,
          "type": "integer"
        },
        "reason": {
          "description": "Human-readable reason for this placement (e.g., \"earliest completion\" or \"0 overlapping files\").",
          "type": "string"
        },
        "session_name": {
          "description": "Effective session name.",
          "type": "string"
        }
      },
      "required": [
        "session_name",
        "position",
        "reason"
      ],
      "type": "object"
    },
    "MergeStrategy": {
      "description": "Strategy for ordering session branches during the merge phase.\n\nDetermines the sequence in which completed session branches are merged\ninto the base branch. Order matters: merging A then B can succeed while\nB then A conflicts.",
      "oneOf": [
        {
          "const": "completion_time",
          "description": "Sort by completion timestamp, with topological index as tiebreak.",
          "type": "string"
        },
        {
          "const": "file_overlap",
          "description": "Greedy algorithm: iteratively pick the session whose changed files\nhave the least overlap with the already-merged set.",
          "type": "string"
        }
      ]
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "The planned merge order for a set of sessions, including the strategy\nused and per-session rationale.",
  "properties": {
    "entries": {
      "description": "Per-session ordering entries.",
      "items": {
        "$ref": "#/$defs/MergePlanEntry"
      },
      "type": "array"
    },
    "strategy": {
      "$ref": "#/$defs/MergeStrategy",
      "description": "Strategy used to determine the ordering."
    }
  },
  "required": [
    "strategy",
    "entries"
  ],
  "title": "MergePlan",
  "type": "object"
}
