crates/assay-types/tests/snapshots/schema_snapshots__merge-report-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$defs": {
    "ConflictFileContent": {
      "additionalProperties": false,
      "description": "Original or resolved content of a single file captured during conflict resolution.\n\nUsed in [`ConflictResolution`] to store both the original conflict-marker content\nand the AI-resolved content for each conflicted file.",
      "properties": {
        "content": {
          "description": "Full file content (with conflict markers for originals; resolved for outputs).",
          "type": "string"
        },
        "path": {
          "description": "Path relative to the repository root.",
          "type": "string"
        }
      },
      "required": [
        "path",
        "content"
      ],
      "type": "object"
    },
    "ConflictResolution": {
      "additionalProperties": false,
      "description": "Audit record for a single AI-resolved merge conflict.\n\nCaptured by the merge runner when AI conflict resolution succeeds and stored\nin [`MergeReport::resolutions`]. Enables post-run inspection of what the AI\nchanged and whether the optional validation command accepted the result.",
      "properties": {
        "conflicting_files": {
          "description": "Paths of files that had conflict markers, relative to the repo root.",
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "original_contents": {
          "description": "Original file contents (with conflict markers) before AI resolution.",
          "items": {
            "$ref": "#/$defs/ConflictFileContent"
          },
          "type": "array"
        },
        "resolved_contents": {
          "description": "Resolved file contents after AI resolution (conflict markers removed).",
          "items": {
            "$ref": "#/$defs/ConflictFileContent"
          },
          "type": "array"
        },
        "resolver_stdout": {
          "description": "Raw stdout from the resolver subprocess (AI-generated content).",
          "type": "string"
        },
        "session_name": {
          "description": "The session whose branch produced the conflict.",
          "type": "string"
        },
        "validation_passed": {
          "description": "Whether the optional validation command accepted the resolution.\n\n`None` when no `validation_command` was configured.\n`Some(true)` when validation passed; `Some(false)` when it rejected the result.",
          "type": [
            "boolean",
            "null"
          ]
        }
      },
      "required": [
        "session_name",
        "conflicting_files",
        "original_contents",
        "resolved_contents",
        "resolver_stdout"
      ],
      "type": "object"
    },
    "MergePlan": {
      "additionalProperties": false,
      "description": "The planned merge order for a set of sessions, including the strategy\nused and per-session rationale.",
      "properties": {
        "entries": {
          "description": "Per-session ordering entries.",
          "items": {
            "$ref": "#/$defs/MergePlanEntry"
          },
          "type": "array"
        },
        "strategy": {
          "$ref": "#/$defs/MergeStrategy",
          "description": "Strategy used to determine the ordering."
        }
      },
      "required": [
        "strategy",
        "entries"
      ],
      "type": "object"
    },
    "MergePlanEntry": {
      "additionalProperties": false,
      "description": "A single entry in the merge plan, recording why a session was placed\nat a particular position in the merge sequence.",
      "properties": {
        "position": {
          "description": "0-based position in the merge sequence.",
          "format": "uint",
          "minimum": 0,
          "type": "integer"
        },
        "reason": {
          "description": "Human-readable reason for this placement (e.g., \"earliest completion\" or \"0 overlapping files\").",
          "type": "string"
        },
        "session_name": {
          "description": "Effective session name.",
          "type": "string"
        }
      },
      "required": [
        "session_name",
        "position",
        "reason"
      ],
      "type": "object"
    },
    "MergeSessionResult": {
      "additionalProperties": false,
      "description": "Per-session result from the merge phase.",
      "properties": {
        "error": {
          "description": "Error or skip reason (present for `Failed`, `ConflictSkipped`, `Aborted`).",
          "type": [
            "string",
            "null"
          ]
        },
        "merge_sha": {
          "description": "SHA of the merge commit (present only when status is `Merged`).",
          "type": [
            "string",
            "null"
          ]
        },
        "session_name": {
          "description": "Effective session name.",
          "type": "string"
        },
        "status": {
          "$ref": "#/$defs/MergeSessionStatus",
          "description": "Merge outcome status."
        }
      },
      "required": [
        "session_name",
        "status"
      ],
      "type": "object"
    },
    "MergeSessionStatus": {
      "description": "Status of a single session after the merge phase.",
      "oneOf": [
        {
          "const": "merged",
          "description": "Session branch was successfully merged.",
          "type": "string"
        },
        {
          "const": "skipped",
          "description": "Session was skipped (e.g., not completed or filtered out before merge).",
          "type": "string"
        },
        {
          "const": "conflict_skipped",
          "description": "Session was skipped because its merge had a conflict and the handler chose to skip.",
          "type": "string"
        },
        {
          "const": "aborted",
          "description": "Merge sequence was aborted (conflict handler chose abort, or abort policy triggered).",
          "type": "string"
        },
        {
          "const": "failed",
          "description": "Session merge failed due to an infrastructure error.",
          "type": "string"
        }
      ]
    },
    "MergeStrategy": {
      "description": "Strategy for ordering session branches during the merge phase.\n\nDetermines the sequence in which completed session branches are merged\ninto the base branch. Order matters: merging A then B can succeed while\nB then A conflicts.",
      "oneOf": [
        {
          "const": "completion_time",
          "description": "Sort by completion timestamp, with topological index as tiebreak.",
          "type": "string"
        },
        {
          "const": "file_overlap",
          "description": "Greedy algorithm: iteratively pick the session whose changed files\nhave the least overlap with the already-merged set.",
          "type": "string"
        }
      ]
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "Summary report of the entire merge phase.\n\nProvides aggregate counts and per-session details for post-run inspection.\nSerializable for persistence alongside [`OrchestratorStatus`].",
  "properties": {
    "aborted": {
      "description": "Number of sessions aborted.",
      "format": "uint",
      "minimum": 0,
      "type": "integer"
    },
    "conflict_skipped": {
      "description": "Number of sessions skipped due to conflicts.",
      "format": "uint",
      "minimum": 0,
      "type": "integer"
    },
    "duration_secs": {
      "description": "Wall-clock duration of the merge phase in seconds.",
      "format": "double",
      "type": "number"
    },
    "plan": {
      "$ref": "#/$defs/MergePlan",
      "description": "The merge plan that determined ordering."
    },
    "resolutions": {
      "description": "Audit records for AI-resolved conflicts, one per resolved session.\n\nEmpty when no AI resolution occurred. Uses `default` + `skip_serializing_if`\nso pre-existing persisted reports without this field deserialize correctly.",
      "items": {
        "$ref": "#/$defs/ConflictResolution"
      },
      "type": "array"
    },
    "results": {
      "description": "Per-session merge results in merge-order sequence.",
      "items": {
        "$ref": "#/$defs/MergeSessionResult"
      },
      "type": "array"
    },
    "sessions_merged": {
      "description": "Number of sessions successfully merged.",
      "format": "uint",
      "minimum": 0,
      "type": "integer"
    },
    "sessions_skipped": {
      "description": "Number of sessions skipped (pre-merge filtering).",
      "format": "uint",
      "minimum": 0,
      "type": "integer"
    }
  },
  "required": [
    "sessions_merged",
    "sessions_skipped",
    "conflict_skipped",
    "aborted",
    "plan",
    "results",
    "duration_secs"
  ],
  "title": "MergeReport",
  "type": "object"
}
