crates/assay-types/tests/snapshots/schema_snapshots__merge-session-result-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$defs": {
    "MergeSessionStatus": {
      "description": "Status of a single session after the merge phase.",
      "oneOf": [
        {
          "const": "merged",
          "description": "Session branch was successfully merged.",
          "type": "string"
        },
        {
          "const": "skipped",
          "description": "Session was skipped (e.g., not completed or filtered out before merge).",
          "type": "string"
        },
        {
          "const": "conflict_skipped",
          "description": "Session was skipped because its merge had a conflict and the handler chose to skip.",
          "type": "string"
        },
        {
          "const": "aborted",
          "description": "Merge sequence was aborted (conflict handler chose abort, or abort policy triggered).",
          "type": "string"
        },
        {
          "const": "failed",
          "description": "Session merge failed due to an infrastructure error.",
          "type": "string"
        }
      ]
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "Per-session result from the merge phase.",
  "properties": {
    "error": {
      "description": "Error or skip reason (present for `Failed`, `ConflictSkipped`, `Aborted`).",
      "type": [
        "string",
        "null"
      ]
    },
    "merge_sha": {
      "description": "SHA of the merge commit (present only when status is `Merged`).",
      "type": [
        "string",
        "null"
      ]
    },
    "session_name": {
      "description": "Effective session name.",
      "type": "string"
    },
    "status": {
      "$ref": "#/$defs/MergeSessionStatus",
      "description": "Merge outcome status."
    }
  },
  "required": [
    "session_name",
    "status"
  ],
  "title": "MergeSessionResult",
  "type": "object"
}
