crates/assay-types/tests/snapshots/schema_snapshots__merge-session-status-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "Status of a single session after the merge phase.",
  "oneOf": [
    {
      "const": "merged",
      "description": "Session branch was successfully merged.",
      "type": "string"
    },
    {
      "const": "skipped",
      "description": "Session was skipped (e.g., not completed or filtered out before merge).",
      "type": "string"
    },
    {
      "const": "conflict_skipped",
      "description": "Session was skipped because its merge had a conflict and the handler chose to skip.",
      "type": "string"
    },
    {
      "const": "aborted",
      "description": "Merge sequence was aborted (conflict handler chose abort, or abort policy triggered).",
      "type": "string"
    },
    {
      "const": "failed",
      "description": "Session merge failed due to an infrastructure error.",
      "type": "string"
    }
  ],
  "title": "MergeSessionStatus"
}
