crates/assay-types/tests/snapshots/schema_snapshots__merge-strategy-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "Strategy for ordering session branches during the merge phase.\n\nDetermines the sequence in which completed session branches are merged\ninto the base branch. Order matters: merging A then B can succeed while\nB then A conflicts.",
  "oneOf": [
    {
      "const": "completion_time",
      "description": "Sort by completion timestamp, with topological index as tiebreak.",
      "type": "string"
    },
    {
      "const": "file_overlap",
      "description": "Greedy algorithm: iteratively pick the session whose changed files\nhave the least overlap with the already-merged set.",
      "type": "string"
    }
  ],
  "title": "MergeStrategy"
}
