crates/assay-types/tests/snapshots/schema_snapshots__mesh-config-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "Configuration for Mesh coordination mode.\n\nControls the heartbeat and timeout thresholds used when `mode = \"mesh\"`.",
  "properties": {
    "dead_timeout_secs": {
      "default": 30,
      "description": "Seconds without a heartbeat before a peer is considered dead. Defaults to 30.",
      "format": "uint64",
      "minimum": 0,
      "type": "integer"
    },
    "heartbeat_interval_secs": {
      "default": 5,
      "description": "Interval in seconds between heartbeat pings. Defaults to 5.",
      "format": "uint64",
      "minimum": 0,
      "type": "integer"
    },
    "suspect_timeout_secs": {
      "default": 10,
      "description": "Seconds without a heartbeat before a peer is considered suspect. Defaults to 10.",
      "format": "uint64",
      "minimum": 0,
      "type": "integer"
    }
  },
  "title": "MeshConfig",
  "type": "object"
}
