crates/assay-types/tests/snapshots/schema_snapshots__mesh-member-state-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "SWIM-inspired membership state for a single peer in Mesh mode.\n\nTransitions: `Alive` → `Suspect` (heartbeat missed) → `Dead` (timeout exceeded).\n`Completed` distinguishes a normal graceful exit from a crash (`Dead`).",
  "oneOf": [
    {
      "const": "alive",
      "description": "Peer is actively sending heartbeats.",
      "type": "string"
    },
    {
      "const": "suspect",
      "description": "Heartbeat missed; peer may be slow or partitioned.",
      "type": "string"
    },
    {
      "const": "dead",
      "description": "Heartbeat timed out; peer is presumed crashed.",
      "type": "string"
    },
    {
      "const": "completed",
      "description": "Peer exited normally (sent a completed sentinel).",
      "type": "string"
    }
  ],
  "title": "MeshMemberState"
}
